feat: change text

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </style>
 </head>
 <body>
-  <h1>✨ ¡Hola, GitHub Pages! ✨</h1>
-  <p>Esta es mi primera página publicada en GitHub Pages 🚀</p>
+  <h1>✨ ¡Hola, soy Enzo Corella! ✨</h1>
+  <p>Viaje a Madeira 🚀</p>
   <a href="https://github.com" target="_blank" class="boton">Visitar GitHub</a>
 </body>
 </html>
