feat: add image

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 <body>
   <h1>✨ ¡Hola, soy Enzo Corella! ✨</h1>
   <p>Viaje a Madeira 🚀</p>
-  <a href="https://github.com" target="_blank" class="boton">Visitar GitHub</a>
+  <img src="./assets/madeira.png" alt="">
 </body>
 </html>
