feat: add botanical-garden

--- a/index.html
+++ b/index.html
@@ -3,40 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hola me llamo Enzo</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #4facfe, #00f2fe);
-      color: #fff;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      font-size: 3em;
-    }
-    p {
-      font-size: 1.2em;
-    }
-    .boton {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 10px 20px;
-      background: #fff;
-      color: #333;
-      text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-    .boton:hover {
-      background: #ddd;
-    }
-  </style>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  
+  <meta http-equiv="Expires" content="0">
+  <link rel="stylesheet" href="./styles/style.css">
+
+  <title>Mapa interactivo de Madeira</title>
+ 
 </head>
 <body>
-  <h1>✨ ¡Hola, soy Enzo Corella! ✨</h1>
+  <h1>✨ Jardín botánico de Madeira ✨</h1>
   <p>Viaje a Madeira 🚀</p>
-  <img src="./assets/madeira.png" alt="">
+  <div>
+        <img src="./assets/jardin-botanico1.png" alt="">
+        <img src="./assets/jardin-botanico2.png" alt="">
+  </div>
+
+  
+  <h4>Características:</h4>
+  <ul>
+    <li>Ubicación: Funchal, Madeira</li>
+    <li>Superficie: 35,000 m²</li>
+    <li>Especies: Más de 2,500 especies de plantas</li>
+  </ul>
+
+  <footer>
+    <p>© 2025 Enzo Corella. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
