feat: change style

--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
  
 </head>
 <body>
-  <h1>✨ Jardín botánico de Madeira ✨</h1>
-  <p>Viaje a Madeira 🚀</p>
-  <div>
-        <img src="./assets/jardin-botanico1.png" alt="">
-        <img src="./assets/jardin-botanico2.png" alt="">
+  <div class="container">
+    <h1>✨ Jardín botánico de Madeira ✨</h1>
+    <p>Viaje a Madeira 🚀</p>
+    <div>
+          <img src="./assets/jardin-botanico1.png" alt="">
+          <img src="./assets/jardin-botanico2.png" alt="">
+    </div>
+
+    <h4>Características:</h4>
+    <ul>
+      <li>Ubicación: Funchal, Madeira</li>
+      <li>Superficie: 35,000 m²</li>
+      <li>Especies: Más de 2,500 especies de plantas</li>
+    </ul>
+
+    <footer>
+      <p>© 2025 Enzo Corella. Todos los derechos reservados.</p>
+    </footer>
   </div>
-
-  
-  <h4>Características:</h4>
-  <ul>
-    <li>Ubicación: Funchal, Madeira</li>
-    <li>Superficie: 35,000 m²</li>
-    <li>Especies: Más de 2,500 especies de plantas</li>
-  </ul>
-
-  <footer>
-    <p>© 2025 Enzo Corella. Todos los derechos reservados.</p>
-  </footer>
 </body>
 </html>
