--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>✨ Jardín botánico de Madeira ✨</h1>
+    <h1>✨ Jardín botánico</h1>
     <p>Viaje a Madeira 🚀</p>
-    <div>
+    <div class="galeria">
           <img src="./assets/jardin-botanico1.png" alt="">
           <img src="./assets/jardin-botanico2.png" alt="">
     </div>
